# zuoshihuice

./: .env  .gitignore  .pre-commit-config.yaml  .vercelignore  ATR_CONFIG_说明文档.md  ATR_简化配置说明.md  CHANGELOG.md  Django到Flask迁移方案.md  Dockerfile  ETHUSDT_1m_test_2020-01-01_to_2020-01-03.h5  LICENSE  MIGRATION.md  README.md  README_FastAPI.md  analyze_leverage_impact.py  backtest_kline_trajectory.py  backtest_kline_trajectory_backup.py  compare_before_after_fix.py  debug_backtest.py  debug_rebate_calculation.py  deploy.bat  deploy.ps1  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  run_backtest_with_custom_atr.py  standalone_backtest_api.py  start_web_system.bat  test_2020_atr_protection.py  test_2020_simple.py  test_corrected_atr_logic.py  test_fixed_logic.py  test_improved_atr.py  test_rebate_issue.py  vercel.json  verify_api.py  verify_fix.js  (+47 more)
.ai_memory/: ATR配置统一文档.md  project_info.md  技术架构决策.md  项目核心信息.md
.trae/: TODO.md
.vercel/: project.json
K线data/: ETHUSDT_1d_processed.pkl  ETHUSDT_1h_processed.pkl  ETHUSDT_1m_2019-11-01_to_2025-06-15.h5  ETHUSDT_1m_processed.pkl  cache_metadata.json
backup_deleted_files/: ETHUSDT_1m_2025-08-09_to_2025-08-09_complete.h5.bak1
cache/: preprocessed_data_02c97ab248a88d5cbead6673501ceb56.pkl  preprocessed_data_044213c0d8f1b7c83bca150878a2f857.pkl  preprocessed_data_07d643c2534a5a9be575472e52017df1.pkl  preprocessed_data_157bb298298052504f9403b65f219d73.pkl  preprocessed_data_1c506a903bfef0d0ff9230225118ae54.pkl  (+8 more)
docs/: screenshots.md
fastapi_backend/: main.py  (+6 more)
(+231 files in other folders)
